# WaveForge-Pi

./: .gitignore  README.md  main.py  pyproject.toml
examples/signal_model/: radarSignalResearch.py
examples/signal_model/src/: radarChirpSignal.py
misk/: UI_design.drawio  cursor.py
misk/AnalysisPulseLocators/src/: radarChirpSignal.py  radarPhaseManipulationSignal.py
misk/gui/: UI_design.drawio
src/config/: gui.py
src/config/widgets/: connection.py
src/core/actions/: devmachine_action.py  locatormanager_action.py
src/core/settings/: locator.py  plot.py
src/core/signal_processing/: signal_generator.py
src/core/tabs/: devmachine_action.py  locatormanager_action.py  signalfrequency_action.py  subtab1.py  subtab2.py
src/gui/: main_window.py  plot.py
src/gui/styles/: left_panel.py  main_panel.py  right_panel.py
src/gui/tabs/: __init__.py  connection.py  locators.py  sigFrequency.py  sigTime.py  tab1.py  tab2.py  tab3.py  tab4.py
src/gui/tabs/_tab1/: subtab1.py  subtab2.py  subtab3.py
src/gui/tabs/_tab2/: subtab1.py
src/gui/tabs/_tab3/: subtab1.py  subtab2.py
src/gui/tabs/_tab4/: subtab1.py
src/gui/tabs/styles/: subtab.py
src/gui/widgets/: connection.py
src/resources/data/: locators.toml
src/utils/: toml_gui_manager.py
tests/: test_locators.toml  test_toml_manager.py
